[gd_scene load_steps=10 format=3 uid="uid://bogrotirh5jqu"]

[ext_resource type="Script" path="res://Scripts/MenuPersonaje/MenuPersonaje.gd" id="1_05xx8"]
[ext_resource type="PackedScene" uid="uid://bpi1wlmpddgdt" path="res://Escenas/CrearPersonaje/clase_y_raza.tscn" id="1_lqapc"]
[ext_resource type="Script" path="res://Scripts/MenuPersonaje/GuardarValores.gd" id="2_8pxcx"]
[ext_resource type="Texture2D" uid="uid://bjq5lv5ucphu" path="res://Iconos/158107.png" id="3_krmvk"]
[ext_resource type="Texture2D" uid="uid://cj8vj8oxyf64e" path="res://Iconos/6134688.png" id="4_ebyyf"]
[ext_resource type="Texture2D" uid="uid://byxvlh8rpy70" path="res://Iconos/13421-200.png" id="5_jriwc"]
[ext_resource type="Texture2D" uid="uid://r6jv8nhr345l" path="res://Iconos/25637.png" id="5_sjn3q"]

[sub_resource type="Theme" id="Theme_gcger"]
default_font_size = 25
BoxContainer/constants/separation = 4
GridContainer/constants/h_separation = 4
GridContainer/constants/v_separation = 20
HBoxContainer/constants/separation = 6
Label/font_sizes/font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scc2i"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.686275, 0.686275, 0.686275, 1)

[node name="MenuPersonaje" type="Control" node_paths=PackedStringArray("nNombre", "nXP", "nNivel", "nAP")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = SubResource("Theme_gcger")
script = ExtResource("1_05xx8")
nNombre = NodePath("MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo/Titulo")
nXP = NodePath("MarginContainer/VBoxContainer/XP Y AP/SXP")
nNivel = NodePath("MarginContainer/VBoxContainer/XP Y AP/SNivel")
nAP = NodePath("MarginContainer/VBoxContainer/XP Y AP/SAP")

[node name="GuardarValores" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_8pxcx")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -362.0
offset_top = -642.0
offset_right = 362.0
offset_bottom = 640.0
color = Color(0, 0.00392157, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -358.0
offset_top = -640.0
offset_right = 358.0
offset_bottom = 638.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CabezaTitulo" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scc2i")

[node name="ContTitulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CabezaTitulo"]
layout_mode = 2
alignment = 1

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Nombre Personaje"
horizontal_alignment = 1

[node name="TInformacion" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Historia y Clase"
horizontal_alignment = 1

[node name="Informacion" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Clase y Raza" parent="MarginContainer/VBoxContainer/Informacion" instance=ExtResource("1_lqapc")]
layout_mode = 2

[node name="bVerLore" type="Button" parent="MarginContainer/VBoxContainer/Informacion"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_horizontal = 10
text = "Ver Lore..."

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TEstadisticas" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Estadisticas e Inventario"
horizontal_alignment = 1

[node name="Estadisticas" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContBotones" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Estadisticas"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Habilidades" type="Button" parent="MarginContainer/VBoxContainer/Estadisticas/ContBotones"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_vertical = 2
text = "Habilidades, Defensas, etc."

[node name="Inventario" type="Button" parent="MarginContainer/VBoxContainer/Estadisticas/ContBotones"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
text = "Inventario"

[node name="Poderes" type="Button" parent="MarginContainer/VBoxContainer/Estadisticas/ContBotones"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_vertical = 10
text = "Poderes y Feats
"

[node name="XP Y AP" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/XP Y AP"]
layout_mode = 2
text = "XP"
horizontal_alignment = 1

[node name="SXP" type="SpinBox" parent="MarginContainer/VBoxContainer/XP Y AP"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/XP Y AP"]
layout_mode = 2
text = "Nivel"
horizontal_alignment = 1

[node name="SNivel" type="SpinBox" parent="MarginContainer/VBoxContainer/XP Y AP"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
value = 1.0
rounded = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/XP Y AP"]
layout_mode = 2
text = "Action Points"
horizontal_alignment = 1

[node name="SAP" type="SpinBox" parent="MarginContainer/VBoxContainer/XP Y AP"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TOtros" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Otros"
horizontal_alignment = 1

[node name="Opciones" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Batalla" type="Button" parent="MarginContainer/VBoxContainer/Opciones"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Batalla"
icon = ExtResource("3_krmvk")
icon_alignment = 1

[node name="Subir Estadisticas" type="Button" parent="MarginContainer/VBoxContainer/Opciones"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Subir 
Estad."
icon = ExtResource("5_sjn3q")
icon_alignment = 1

[node name="Contadores" type="Button" parent="MarginContainer/VBoxContainer/Opciones"]
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Notas"
icon = ExtResource("4_ebyyf")
icon_alignment = 1

[node name="Familiares" type="Button" parent="MarginContainer/VBoxContainer/Opciones"]
visible = false
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
text = "Familiar"
icon = ExtResource("5_jriwc")
icon_alignment = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
text = "Volver"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Informacion/bVerLore" to="." method="_on_b_ver_lore_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Estadisticas/ContBotones/Habilidades" to="." method="_on_habilidades_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Estadisticas/ContBotones/Inventario" to="." method="_on_inventario_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Estadisticas/ContBotones/Poderes" to="." method="_on_poderes_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/XP Y AP/SXP" to="GuardarValores" method="_on_sxp_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/XP Y AP/SNivel" to="GuardarValores" method="_on_s_nivel_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/XP Y AP/SAP" to="GuardarValores" method="_on_sap_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Opciones/Batalla" to="." method="_on_batalla_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Opciones/Subir Estadisticas" to="." method="_on_subir_estadisticas_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
